Fix ignore/exclude and order on a renamed property (#660)
* Add more tests for `@JsonTypeInfo(visible = true)`

* Correct merge

* Fix ignore/exclude and order on a renamed property